--- a/labs/references.bib
+++ b/labs/references.bib
@@ -46,3 +46,14 @@
 	url = {http://dx.doi.org/10.1371/journal.pone.0090081},
 	langid = {en}
 }
+
+@article{cinar2019classification,
+  title={Classification of rice varieties using artificial intelligence methods},
+  author={Cinar, Ilkay and Koklu, Murat},
+  journal={International Journal of Intelligent Systems and Applications in Engineering},
+  volume={7},
+  number={3},
+  pages={188--194},
+  year={2019},
+  publisher={International Journal of Intelligent Systems and Applications in Engineering}
+}
