--- a/slides/16-variable-transformations.qmd
+++ b/slides/16-variable-transformations.qmd
@@ -20,6 +20,8 @@ html-math-method:
 execute:
   freeze: auto
   echo: true
+  message: false
+  warning: false
 knitr:
   opts_chunk: 
     R.options:      
@@ -366,7 +368,7 @@ m3_aug <- augment(resp_logx_fit)
 ```
 
 | Rate vs. Age                            | log(Rate) vs. Age                            | Rate vs. log(Age)                            |
-|-----------------------------------------|----------------------------------------------|----------------------------------------------|
+|----------------------|-------------------------|-------------------------|
 | `r round(glance(resp_fit)$r.squared,3)` | `r round(glance(resp_logy_fit)$r.squared,3)` | `r round(glance(resp_logx_fit)$r.squared,3)` |
 
 <br>
