--- a/slides/24-exam-02-review.qmd
+++ b/slides/24-exam-02-review.qmd
@@ -46,7 +46,7 @@ knitr::opts_chunk$set(
 
 -   Final report and GitHub repo due December 12 at 11:59pm.
 
--   Wednesday, December 4 is the last day of regular office hours
+-   Regular office hours end Thursday at 10am.
 
 ## Project feedback {.midi}
 
